implemented page number display

--- a/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
+++ b/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
@@ -8,10 +8,9 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid x:Name="MainGrid">
-        <ScrollViewer x:Name="MainScrollViewer" KeyDown="HandleKeyDown" IsTabStop="True">
+        <ScrollViewer x:Name="MainScrollViewer" KeyDown="HandleKeyDown" IsTabStop="True" ViewChanging="HandleScrollViewChange">
             <StackPanel x:Name="ImageContainer" Orientation="Vertical"/>
         </ScrollViewer>
-        <!--TextBlock Text="Page 5 of 16" Margin="0 100 0 0"HorizontalAlignment="Center" VerticalAlignment="Top"/-->
         <CommandBar x:Name="TopCommandBar"
                     ClosedDisplayMode="Minimal"
                     OverflowButtonVisibility="Collapsed"
@@ -71,6 +70,8 @@
                                 MinWidth="90"
                                 Click="HandleLoopBtnClick"/>
         </CommandBar>
+        <TextBlock x:Name="PageNumDisplay" Visibility="Collapsed"
+                   HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 100 0 0"/>
         <ProgressBar x:Name="LoadingProgressBar"
                      VerticalAlignment="Top" Minimum="0" Maximum="100" Value="0"
                      Visibility="Collapsed"/>
