--- a/Hitomi-Scroll-Viewer/SearchPage.xaml
+++ b/Hitomi-Scroll-Viewer/SearchPage.xaml
@@ -60,6 +60,9 @@
                                   SelectionChanged="LoadTagsInTextBox"
                                   HorizontalAlignment="Stretch"
                                   />
+                        <CheckBox x:Name="IgnoreGlobalTagBtn"
+                                  HorizontalAlignment="Center"
+                                  Content="Ignore Global Tag"/>
                     </StackPanel>
                     <StackPanel x:Name="ControlButtonContainer" Grid.Column="1"
                                 Orientation="Vertical" Spacing="20" Margin="0 0 20 0"/>
