LoadingControlBtn is now disabled by default

--- a/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
+++ b/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
@@ -87,6 +87,7 @@
                           Icon="Sync"
                           MinWidth="90"
                           Click="HandleLoadingControlBtnClick"
+                          IsEnabled="False"
                           IsTabStop="False"
                           />
             <AppBarSeparator MinWidth="30"/>
