--- a/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
+++ b/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
@@ -7,8 +7,8 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid x:Name="MainGrid">
-        <ScrollViewer x:Name="MainScrollViewer" KeyDown="HandleKeyDown" IsTabStop="True" ViewChanging="HandleScrollViewChange">
+    <Grid x:Name="MainGrid" KeyDown="HandleKeyDown">
+        <ScrollViewer x:Name="MainScrollViewer" IsTabStop="True" ViewChanging="HandleScrollViewChange">
             <StackPanel x:Name="ImageContainer" Orientation="Vertical"/>
         </ScrollViewer>
         <CommandBar x:Name="TopCommandBar"
